# dev-kit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  GITHUB_PACKAGES_TROUBLESHOOTING.md  Makefile  PUBLISHING_GUIDE.md  README.md  pyproject.toml  setup_github_packages.sh
.github/workflows/: ci.yml  publish.yml
migrations/: env.py
migrations/versions/: 0001_initial_users_rbac.py
src/dev_kit/: __init__.py  example_app.py  exceptions.py  services.py
src/dev_kit/database/: extensions.py  mixins.py  repository.py
src/dev_kit/instance/: devkit_example.db
src/dev_kit/modules/users/: bootstrap.py  cli.py  models.py  routes.py  schemas.py  services.py
src/dev_kit/web/: decorators.py  jwt.py  routing.py  schemas.py
src/instance/: devkit.db
tests/: conftest.py  helpers.py  test_cli_and_seed.py  test_exceptions.py  test_services.py
tests/database/: test_integrity_errors.py  test_mixins.py  test_repository.py
tests/modules/users/: test_auth_rbac_e2e.py  test_permissions_negative.py  test_user_e2e.py  test_user_routing.py  test_user_schemas.py  test_user_services.py  test_validation.py
tests/web/: test_decorators.py  test_jwt_helper.py  test_routing.py  test_schemas.py
