[project]
name = "dev-kit"
version = "0.1.0"
description = "personal dev-kit for Flask applications"
authors = [
    {name = "Bahaa Shklawon", email = "bahaashklawon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "apiflask (>=2.4.0,<3.0.0)",
    "marshmallow-sqlalchemy (>=1.4.2,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-limiter (>=3.5.1,<4.0.0)"
]

[project.scripts]
dev-kit-seed-auth = "dev_kit.modules.users.cli:main"

[tool.poetry]
packages = [{include = "dev_kit", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
alembic = "^1.13.2"
ruff = "^0.5.7"
black = "^24.8.0"
mypy = "^1.11.2"
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
addopts = "-q --cov=src/dev_kit --cov-config=.coveragerc --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
exclude = ["migrations/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false

